collapse directive fixed

--- a/src/scss/modules/_ngmaterial.scss
+++ b/src/scss/modules/_ngmaterial.scss
@@ -27,5 +27,21 @@
 }
 
 body{
-  overflow: hidden;
+//  overflow: hidden;
+}
+
+.ta-toolbar{
+  text-align:center;
+}
+
+.btn-group{
+  display: inline-block;
+}
+
+#toolbarWC,#toolbarCC{
+  display:none !important;
+}
+
+md-bottom-sheet{
+  overflow:hidden;
 }
